# dataloader-rs

./: .gitignore  .pre-commit-config.yaml  .releaserc  CHANGELOG.md  Cargo.toml  README.md  ROADMAP_TORCH_PARITY.md  idea.md  pyproject.toml  renovate.json
.cargo/: config.toml
.github/scripts/: edit-version.sh
.github/workflows/: audit.yml  bench.yml  ci.yml  publish.yml  release.yml
bench/: bench.md  bench_batch_size.py  bench_inter_workers.py  bench_prefetch_depth.py  bench_sampler.py  common.py  conftest.py  python_dataloader_benchmark.py  test_bench_batch_size.py  test_bench_prefetch.py  test_bench_sampler.py  test_bench_workers.py  torch_dataloader_benchmark.py
benches/: bench_batch_size.rs  bench_early_drop.rs  bench_inter_workers.rs  bench_intra_workers.rs  bench_prefetch_depth.rs  bench_sampler.rs  common.rs  dataloader.rs
benchmarks/python-3.13t/: data.js
benchmarks/python-3.14t/: data.js
benchmarks/rust/: data.js
dataloader_rs/: __init__.py  __init__.pyi
examples/: basic.rs  stress_safety.rs
python/: README.md
src/: dataset.rs  error.rs  lib.rs
src/collator/: mod.rs  torch.rs  vec_collator.rs
src/collator/default_collator/: array.rs  map.rs  mod.rs  ndarray.rs  primitive.rs  sequence.rs  torch.rs  tuple.rs
src/loader/: builder.rs  core.rs  iter.rs  mod.rs  prefetch.rs  worker.rs
src/python/: collator.rs  dataloader.rs  dataset.rs  iterator.rs  mod.rs  sampler.rs
src/sampler/: batch_sampler.rs  distributed.rs  mod.rs  random.rs  sequential.rs
tests/: integration.rs  integration_collate_default.rs  integration_collate_ndarray.rs  integration_collate_torch.rs  py_dataloader_test_utils.py  test_dataloader_errors.py  test_dataloader_integration.py  test_dataloader_iterator_semantics.py  test_dataloader_parallel.py  test_dataloader_safety.py  test_dataloader_sequential.py  test_dataloader_validation.py
