[package]
name        = "dataloader-rs"
version     = "0.1.0"
edition     = "2024"
description = "High-performance DataLoader for Rust with a PyTorch-like interface"
license     = "MIT"
rust-version = "1.91"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
ndarray = ["dep:ndarray"]
torch-rs = ["dep:tch"]
python = ["dep:pyo3"]


[profile.release]
opt-level = 3
codegen-units = 1
panic = 'unwind'
lto = "thin"

[profile.bench]
opt-level = 3
codegen-units = 1
lto = "thin"

# ── Runtime dependencies ──────────────────────────────────────────────────────

[dependencies.rayon]
version          = "1"
default-features = false

[dependencies.crossbeam-channel]
version          = "0.5"
default-features = false
features         = ["std"]

[dependencies.hashbrown]
version          = "0.16"
default-features = false
features         = ["default-hasher"]

[dependencies.fastrand]
version          = "2"

# ── Optional Runtime dependencies ──────────────────────────────────────────────────────

[dependencies.ndarray]
version          = "0.17"
default-features = false
features         = ["std"]
optional         = true

[dependencies.tch]
version          = "0.24"
default-features = false
optional         = true

[dependencies.pyo3]
version          = "0.28"
default-features = false
features         = ["macros"]
optional         = true

# ── Dev / benchmark dependencies ──────────────────────────────────────────────

[dev-dependencies.criterion]
version          = "0.8"
default-features = false
features         = ["cargo_bench_support", "html_reports", "plotters"]

[dev-dependencies.tch]
version          = "0.24"
default-features = false
features         = ["download-libtorch"]

[[bench]]
name    = "bench_inter_workers"
harness = false

[[bench]]
name    = "bench_intra_workers"
harness = false

[[bench]]
name    = "bench_prefetch_depth"
harness = false

[[bench]]
name    = "bench_batch_size"
harness = false

[[bench]]
name    = "bench_sampler"
harness = false

[[bench]]
name    = "bench_early_drop"
harness = false
