[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "dataloader-rs"
version = "0.1.0"
description = "PyO3 bindings for dataloader-rs with a PyTorch-like DataLoader API"
requires-python = ">=3.13"
readme = "python/README.md"
dependencies = []

[dependency-groups]
dev = [
    "maturin>=1.7,<2.0",
    "pytest==9.0.3",
    "pytest-benchmark==5.2.3",
    "torch==2.11",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"bench/*" = ["B023", "E741"]   # loop variable capture + short lambda arg names are intentional

[tool.ty.environment]
python-version = "3.13"


[tool.pytest.ini_options]
testpaths = ["tests", "bench"]
# Benchmark tests are skipped in regular pytest runs; the bench CI job
# re-enables them explicitly with -m bench --benchmark-enable.
addopts = "-m 'not bench'"
markers = ["bench: mark test as a benchmark (deselected by default)"]

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "dataloader_rs"
python-source = "."
features = ["python", "pyo3/extension-module"]
